<resources>
    <string name="app_name">BringDat</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hint_email_username">Enter email</string>
    <string name="hint_password">Enter Password</string>
    <string name="error_email_required">Please enter the email address</string>
    <string name="error_password_required">Please enter the password</string>
    <string name="success_login">You have been logged in successfully</string>
    <string name="error_server">Something went wrong! Please try again.</string>
    <string name="eror_invalid_credentials">Invalid login credentials</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="error_no_orders">Sorry, no order found</string>
    <string name="error_no_more_orders">No more orders</string>
    <string name="prompt_scan_devices">Scan devices</string>
    <string name="prompt_other_devices">Other Available Devices</string>
    <string name="prompt_paired_devices">Paired Devices</string>
    <string name="label_select_device">Select your device to continue</string>
    <string name="prompt_no_devices">No devices found</string>
    <string name="prompt_no_device_paired">No devices have been paired</string>
    <string name="prompt_scanning_devices">Scanning for devices</string>
    <string name="prompt_print">Print</string>
    <string name="prompt_connect_bt_printer">Connect Bluetooth Printer</string>
    <string name="error_connection_failed">Unable to connect device</string>
    <string name="success_connection">Connection successful</string>
    <string name="error_connection_lost">Device connection was lost</string>
    <string name="error_bluetooth_unavailable">Bluetooth is not available</string>
    <string name="prompt_reprint">Re-Print</string>
    <string name="prompt_apt_building">Apt/Suite/Bldg#</string>
    <string name="prompt_bluetooth_enabled">Bluetooth has been enabled</string>
    <string name="prompt_logout">Logout</string>
    <string name="alert_logout">Are you sure want to logout your account?</string>
    <string name="prompt_logged_out">You have been logged out successfully</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="prompt_total">Total</string>
    <string name="prompt_connect_printer">Please connect a Bluetooth printer</string>
    <string name="error_bt_canceled">Please turn on bluetooth</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="error_connection_down">Connection lost!</string>
    <string name="error_internet_disconnected">No internet connection. Please try again.</string>
    <string name="prompt_print_receipt">Print Receipt</string>
    <string name="alert_reprint_receipt">Are you sure to print the receipt?</string>
    <string name="prompt_discount">BringDAT DISCOUNT</string>
    <string name="convenience_tax">Convenience Fee</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="tip">TIP</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="subtotal">SUB TOTAL</string>
    <string name="cheese_and_cauliflower">Cheese and Cauliflower</string>
    <string name="payment_type">PaymentType: COD</string>
    <string name="order_print">Print</string>
    <string name="processing">Processing</string>
    <string name="order_name">Atalia Smith</string>
    <string name="working_orders">Working Order</string>
    <string name="orderdt">00/00/0000, 58:58AM</string>
    <string name="aPdt">Date and Time</string>
    <string name="prompt_received_time">Received Time</string>
    <string name="order_number">Order Number</string>
    <string name="change_status">Update Status</string>
    <string name="prompt_order_instructions">Order Instructions:</string>
    <string name="prompt_half_one">1st Half:</string>
    <string name="prompt_half_two">2nd Half:</string>
    <string name="prompt_logger_login">Login as Logger</string>
    <string name="prompt_admin_login">Login as admin</string>
    <string name="prompt_completed_orders">Completed Orders</string>
    <string name="prompt_pending_orders">Pending Orders</string>
    <string name="prompt_home">Home</string>
    <string name="prompt_reports">Reports</string>
    <string name="prompt_settings">Settings</string>
    <string name="prompt_completed">Completed</string>
    <string name="prompt_pending">Pending</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_change_status">Update Status</string>
    <string name="prompt_retry">Retry</string>
    <string name="prompt_online_ordering">Online Ordering</string>
    <string name="prompt_printing">Printing On</string>
    <string name="prompt_cod_orders">COD Orders</string>
    <string name="prompt_prepaid_orders">Prepaid Orders</string>
    <string name="prompt_sounds">Sounds</string>
    <string name="notification_phone_ringing">Phone Ringing</string>
    <string name="notification_buzzer">Buzzer</string>
    <string name="notification_explo">Explo</string>
    <string name="notification_old_school_clock">Old School Clock</string>
    <string name="error_permissions_denied">Please grant all the permissions</string>
    <string name="prompt_back_again_exit">Press back again to exit</string>
    <string name="notification_content">You have got new order</string>
    <string name="prompt_total_tax">Total Tax Collected</string>
    <string name="prompt_positive_adjuments">Total + Adjuments</string>
    <string name="prompt_negative_adjustments">Total - Adjustments</string>
    <string name="prompt_gross_total">Gross Total</string>
    <string name="prompt_total_orders">Total Order Count</string>
    <string name="prompt_canceled_orders">Cancel Order Count</string>
    <string name="prompt_delivery_charges">Total Delivery Charges Collected</string>
    <string name="prompt_tips">Total Tips Collected</string>
    <string name="prompt_credit_card_sales">Total Credit Card Sales</string>
    <string name="prompt_cash_sales">Total Cash Sales</string>
    <string name="prompt_sales_report">Sales \nReport</string>
    <string name="prompt_today">Today</string>
    <string name="prompt_yesterday">Yesterday</string>
    <string name="prompt_last_week">Last 7 days</string>
    <string name="prompt_last_month">Last 30 days</string>
    <string name="prompt_this_month">This month</string>
    <string name="prompt_previous_month">Last month</string>
    <string name="prompt_custom_range">Custom range</string>
    <string name="prompt_no_reports">No reports found</string>
    <string name="prompt_apply">Apply</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_to_date">To Date</string>
    <string name="prompt_from_date">From date</string>
    <string name="error_empty_dates">Please select both the dates</string>
    <string name="prompt_switch_admin">Switch To BringDat Admin</string>
    <string name="prompt_switch_logger">Switch to BringDat Logger</string>
    <string name="prompt_logger">BringDat Logger</string>
    <string name="prompt_admin">BringDat Admin</string>
    <string name="prompt_current_order_status">Order\'s current status :</string>
    <string name="prompt_complete">Complete</string>
    <string name="prompt_cancel_order">Cancel Order</string>
    <string name="prompt_working">Working</string>
    <string name="prompt_minutes">minutes</string>
    <string name="prompt_order_ready_time">Order will be ready in</string>
    <string name="prompt_new_orders">New Orders</string>
    <string name="prompt_working_orders">Working Orders</string>
    <string name="prompt_history">History</string>
    <string name="prompt_date_time">Date/Time Received</string>
    <string name="prompt_delivery_order">Delivery Order</string>
    <string name="prompt_time">Timed Order:</string>
    <string name="error_empty_time">Please enter the time in minutes</string>
    <string name="prompt_specify_time">Or, specify a time</string>
    <string name="time_60_min">60 Min</string>
    <string name="time_20_min">20 Min</string>
    <string name="time_45_min">45 Min</string>
    <string name="time_15_min">15 Min</string>
    <string name="time_30_min">30 Min</string>
    <string name="time_10_min">10 Min</string>
    <string name="prompt_enter">Enter</string>
    <string name="prompt_continue_without_update">Continue without update</string>
    <string name="prompt_void_sale">Void Sale</string>
    <string name="prompt_adjust">Adjust</string>
    <string name="prompt_submit">Submit</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_void_reason">Please enter the reason for voiding this</string>
    <string name="error_empty_name">Please enter your name</string>
    <string name="prompt_transaction_adjustment">Transaction Adjustment</string>
    <string name="prompt_adjust_price">Price: (use \"-\" for refunds)</string>
    <string name="prompt_amount">Enter Amount</string>
    <string name="prompt_adjustment_reason">Reason For Adjustment</string>
    <string name="prompt_adjusting_reasons">Please enter the reason for adjusting this transaction</string>
    <string name="prompt_currency">$</string>
    <string name="error_empty_amount">Please enter the amount</string>
    <string name="prompt_empty_pending_orders">No pending order exists</string>
    <string name="prompt_empty_working_orders">No working order exists</string>
    <string name="prompt_special_instruction">Special Instruction:</string>
    <string name="alert_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="prompt_pickup_order">Pickup Order</string>
    <string name="prompt_pay_cc">Direct_Pay_CC</string>
    <string name="prompt_pay_type">Type:</string>
    <string name="prompt_card_name">Name on Card:</string>
    <string name="prompt_card_no">CC#:</string>
    <string name="prompt_expiry">Exp:</string>
    <string name="prompt_cvc">CVC:</string>
    <string name="prompt_card_payment_type">Payment Type:</string>
    <string name="prompt_coupons">Coupons/Discounts</string>
    <string name="prompt_action_type">Action Type</string>
    <string name="prompt_action_date_time">Date/Time</string>
    <string name="prompt_internet_down">Internet Down!</string>
    <string name="prompt_check_internet">Please check your internet connection and connect again.</string>
    <string name="error_pending_order_incomplete">Please complete your pending orders</string>
    <string name="prompt_auto_printing">Auto Printing</string>
    <string name="prompt_network_printer">Network Printer</string>
    <string name="prompt_bluetooth_printer">Bluetooth Printer</string>
    <string name="prompt_ip_address">IP Address</string>
    <string name="hint_ip_address">Enter IP Address</string>
    <string name="prompt_connect">Connect</string>
    <string name="error_empty_ip_address">Please enter the ip address</string>
    <string name="success_printer_connected">Printer connected successfully</string>
    <string name="error_printer_disconnected">Printer disconnected</string>
    <string name="error_printing_failed">Failed to print the receipt</string>
    <string name="prompt_version_date">02/26/2018</string>
    <string name="prompt_printing_options">Printing Options</string>
</resources>