<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/prompt_current_order_status"/>

                <View
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="@dimen/_1sdp"/>

                <TextView
                    android:id="@+id/tvOrderCurrentStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/processing"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="true"/>

            </LinearLayout>

            <Button
                android:id="@+id/btPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/prompt_pending"
                android:textColor="@color/colorWhite"
                style="?borderlessButtonStyle"
                android:background="@drawable/shape_button_green_rounded"/>

            <Button
                android:id="@+id/btWorkingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/prompt_working"
                android:textColor="@color/colorWhite"
                style="?borderlessButtonStyle"
                android:visibility="gone"
                android:background="@drawable/shape_button_green_rounded"/>

            <Button
                android:id="@+id/btComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/prompt_complete"
                android:textColor="@color/colorWhite"
                style="?borderlessButtonStyle"
                android:background="@drawable/shape_button_green_rounded"/>

            <Button
                android:id="@+id/btCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/prompt_cancel_order"
                android:textColor="@color/colorWhite"
                style="?borderlessButtonStyle"
                android:background="@drawable/shape_rounded_red"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/prompt_cancel"
        app:borderWidth="0dp"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>